# timeline

./: README.md  cloudbuild.yaml  docker-compose.yml  script-async.py  script.py
.github/workflows/: rust.yml
api/: .env  Cargo.toml  Dockerfile  Rocket.toml  builder.Dockerfile
api/docker/dev/: Dockerfile
api/docker/prod/: builder.Dockerfile  final.Dockerfile
api/src/: auth.rs  geodata.rs  main.rs  pool.rs  quantize.rs  tests.rs
api/src/db/: migrations.rs
api/src/entities/: geodata.rs  mod.rs  path.rs
timeline/: .env  README.md  pubspec.yaml
timeline/android/: build.gradle
timeline/android/app/: build.gradle  google-services.json
timeline/android/app/src/main/: AndroidManifest.xml
timeline/ios/Runner.xcodeproj/: project.pbxproj
timeline/lib/: main.dart
timeline/lib/modules/core/config/: services.dart
timeline/lib/modules/core/model/: location_entry.dart  location_entry.g.dart
timeline/lib/modules/core/services/: api_service.dart  authentication_service.dart  database_service.dart  location_service.dart  sync_data_service.dart
timeline/lib/modules/core/widgets/: layout.dart
timeline/lib/modules/home/views/: home_view.dart
timeline/lib/modules/login/views/: login_view.dart  splash_view.dart
timeline/lib/modules/map/views/: map_view.dart
timeline/test/: widget_test.dart
