[package]
name = "timeline"
version = "0.1.0"
authors = [
    "Paweł Rubin <pawelrubin19@gmail.com>",
    "Konrad Grochowski <konrad7g@gmail.com>",
    "Bartosz Rajczyk <bartorkrajczyk@gmail.com>",
]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7.2.0"
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
chrono = { version = "^0.4.19" }
uuid = { version = "^0.8.2" }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["json", "uuid"] }
sea-orm = { version = "^0.4.0", features = [
    "macros",
    "runtime-tokio-rustls",
], default-features = false }

sea-orm-rocket = { git = "https://github.com/SeaQL/sea-orm" }

[features]
default = ["sqlx-postgres"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]
